# ml_modelling

ml_modeling/: README.md
recommendation_system/: 1_collaborative_filtering.ipynb  pyproject.toml
